fix the legend so its vertically center aligned

--- a/src/scss/partials/_selector.scss
+++ b/src/scss/partials/_selector.scss
@@ -46,7 +46,7 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
       @at-root #{&}--item {
         //the container around the box and the label
